2000-08-07  Paul Eggert  <eggert@twinsun.com>

	Standardize on "memory exhausted" instead of "Memory exhausted"
	or "virtual memory exhausted".
	* obstack.c (print_and_abort): Use "memory exhausted", not
	"virtual memory exhausted".
	* same.c (same_name): Invoke xalloc_die instead of printing
	our own message.
	* userspec.c (parse_user_spec): Likewise.
	* bumpalloc.h: comment fix
	* same.c, userspec.c: Include xalloc.h.

	* xalloc.h (xalloc_msg_memory_exhausted): Now char const[],
	not char *const and pointing to a constant array.
	* xmalloc.c (xalloc_msg_memory_exhausted): Likewise.
	(xrealloc): Comment fix.

	* userspec.c (parse_user_spec):
	Don't translate a message until just before returning,
	to avoid unnecessary translation.

2000-08-07  Jim Meyering  <meyering@lucent.com>

	* addext.c, argmatch.c, argmatch.h, backupfile.h, bumpalloc.h,
	chown.c, diacrit.h, dirname.h, dup2.c, exclude.h, fileblocks.c,
	fnmatch.c, fnmatch.h, fsusage.c, fsusage.h, getdate.h,
	getgroups.c, gethostname.c, getopt.h, group-member.c,
	hard-locale.c, hash.h, isdir.c, lchown.c, linebuffer.c,
	linebuffer.h, long-options.h, malloc.c, md5.c, md5.h, memchr.c,
	memcmp.c, memcoll.c, memset.c, mktime.c, modechange.h, obstack.h,
	pathmax.h, realloc.c, rmdir.c, safe-read.c, save-cwd.c, stime.c,
	stpcpy.c, strcasecmp.c, strcspn.c, strdup.c, stripslash.c,
	strstr.c, strtod.c, strtol.c, strtoul.c, strtoull.c, strtoumax.c,
	utime.c, version-etc.h, xalloc.h, xstrdup.c, xstrtoumax.c,
	yesno.c: Back out Copyright date changes for each file with no change
	this year.  This eases coordination with other programs using the same
	source code modules.  From Paul Eggert.

2000-08-03  Greg McGary  <greg@mcgary.org>

	* regex.c (SET_HIGH_BOUND, MOVE_BUFFER_POINTER,
	ELSE_EXTEND_BUFFER_HIGH_BOUND): New macros.
	(EXTEND_BUFFER): Use them.

2000-08-01  Jim Meyering  <meyering@lucent.com>

	* dirname.c (ISSLASH): Define.
	(BACKSLASH_IS_PATH_SEPARATOR): Define.