@@ -1,0 +1,8 @@
+#if HAVE_CONFIG_H
+# include <config.h>
+#endif
+
+#include <stdio.h>
+#include <sys/types.h>
+
+size_t __fpending (FILE *);
